--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,17 +2,25 @@ name: Docker Image Azure Container Registry CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
 jobs:
-
-  build:
-
+  build-and-push-to-acr:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag spinboard-go:$(date +%s)
+
+    - name: Build and Tag the Docker image
+      run: |
+        docker build . --file Dockerfile --tag spinboard-go:latest
+        docker tag spinboard-go:latest ${{ secrets.ACR_URL }}/spinboard-go:latest
+        
+    - name: Log in to Azure Container Registry
+      run: echo ${{ secrets.ACR_PASSWORD }} | docker login ${{ secrets.ACR_URL }} -u ${{ secrets.ACR_USERNAME }} --password-stdin
+
+    - name: Push the Docker image
+      run: |
+        docker push ${{ secrets.ACR_URL }}/spinboard-go:latest
