--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,26 +1,49 @@
-name: Docker Image Azure Container Registry CI
+name: Build and deploy container app to Azure Web App - spinboard
 
 on:
   push:
-    branches: ["master"]
-  pull_request:
-    branches: ["master"]
+    branches:
+      - master
+  workflow_dispatch:
 
 jobs:
-  build-and-push-to-acr:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Build and Tag the Docker image
-      run: |
-        docker build . --file Dockerfile --tag spinboard-go:latest
-        docker tag spinboard-go:latest ${{ secrets.ACR_URL }}/spinboard-go:latest
-        
-    - name: Log in to Azure Container Registry
-      run: echo ${{ secrets.ACR_PASSWORD }} | docker login ${{ secrets.ACR_URL }} -u ${{ secrets.ACR_USERNAME }} --password-stdin
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    - name: Push the Docker image
-      run: |
-        docker push ${{ secrets.ACR_URL }}/spinboard-go:latest
+      - name: Log in to container registry
+        uses: docker/login-action@v2
+        with:
+          registry: https://shabbiregistry.azurecr.io/
+          username: ${{ secrets.AzureAppService_ContainerUsername_747e3b4693a9431dbacf3559d00dc9a9 }}
+          password: ${{ secrets.AzureAppService_ContainerPassword_2d4e1dd68b08419098e523d69e68e438 }}
+
+      - name: Build and push container image to registry
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: shabbiregistry.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_747e3b4693a9431dbacf3559d00dc9a9 }}/spinboard-go:${{ github.sha }}
+          file: ./Dockerfile
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: 'spinboard'
+          slot-name: 'Production'
+          publish-profile: ${{ secrets.AzureAppService_PublishProfile_254c7137e116400386499e0c39d7fbf7 }}
+          images: 'shabbiregistry.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_747e3b4693a9431dbacf3559d00dc9a9 }}/spinboard-go:${{ github.sha }}'
