--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,48 +1,27 @@
-name: Build and deploy container app to Azure Web App - spinboard
+
+name: Docker Image Azure Container Registry CI
 
 on:
   push:
-    branches:
-      - master
-  workflow_dispatch:
+    branches: ["master"]
+  pull_request:
+    branches: ["master"]
 
 jobs:
-  build:
+  build-and-push-to-acr:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+    - name: Build and Tag the Docker image
+      run: |
+        docker build . --file Dockerfile --tag spinboard-go:latest
+        docker tag spinboard-go:latest ${{ secrets.ACR_URL }}/spinboard-go:latest
+        
+    - name: Log in to Azure Container Registry
+      run: echo ${{ secrets.ACR_PASSWORD }} | docker login ${{ secrets.ACR_URL }} -u ${{ secrets.ACR_USERNAME }} --password-stdin
 
-      - name: Log in to container registry
-        uses: docker/login-action@v2
-        with:
-          registry: https://shabbiregistry.azurecr.io/
-          username: ${{ secrets.ACR_USERNAME }}
-          password: ${{ secrets.ACR_PASSWORD }}
-
-      - name: Build and push container image to registry
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          push: true
-          tags: shabbiregistry.azurecr.io/${{ secrets.ACR_USERNAME }}/spinboard-go:${{ github.sha }}
-          file: ./Dockerfile
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'spinboard'
-          slot-name: 'Production'
-          images: 'shabbiregistry.azurecr.io/${{ secrets.ACR_USERNAME }}/spinboard-go:${{ github.sha }}'
+    - name: Push the Docker image
+      run: |
+        docker push ${{ secrets.ACR_URL }}/spinboard-go:latest
