--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,3 @@
-
 name: Docker Image Azure Container Registry CI
 
 on:
@@ -12,16 +11,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    # Step 1: Checkout the source code
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-    - name: Build and Tag the Docker image
-      run: |
-        docker build . --file Dockerfile --tag spinboard-go:latest
-        docker tag spinboard-go:latest ${{ secrets.ACR_URL }}/spinboard-go:latest
-        
+    # Step 2: Log in to Azure Container Registry
     - name: Log in to Azure Container Registry
       run: echo ${{ secrets.ACR_PASSWORD }} | docker login ${{ secrets.ACR_URL }} -u ${{ secrets.ACR_USERNAME }} --password-stdin
 
-    - name: Push the Docker image
+    # Step 3: Build and tag the Docker image
+    - name: Build and tag the Docker image
       run: |
+        docker build . --file Dockerfile --tag ${{ secrets.ACR_URL }}/spinboard-go:${{ github.sha }}
+        docker tag ${{ secrets.ACR_URL }}/spinboard-go:${{ github.sha }} ${{ secrets.ACR_URL }}/spinboard-go:latest
+
+    # Step 4: Push both tags to ACR
+    - name: Push Docker images to ACR
+      run: |
+        docker push ${{ secrets.ACR_URL }}/spinboard-go:${{ github.sha }}
         docker push ${{ secrets.ACR_URL }}/spinboard-go:latest
